<resources>
    <string name="app_name">PlayFit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_Profile">Profile</string>
    <string name="menu_Friends">Friends</string>
    <string name="menu_maps">Maps</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_socialmedia">Social Media</string>
    <string name="settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Sign in or register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Hi "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="logout">Logout</string>
    <string name="title_activity_profile_actvity">ProfileActvity</string>
    <string name="contentProfile">Profile content test</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="signupButton"> Sign up</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="title_activity_friends_detail">FriendsDetailActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="points">Points</string>
    <string name="einloesbare_punkte">Einlösbare Punkte:</string>
    <string-array name="activities">
        <item>Basketball</item>
        <item>Fitnessstudio</item>
        <item>Joggen</item>
        <item>Rad fahren</item>
        <item>Schwimmen</item>
        <item>Tennis</item>
        <item>Volleyball</item>
    </string-array>
</resources>
