<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:id="@+id/nav_menu">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_Profile" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_Friends" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_maps" />
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_scan" />
       <!-- <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_scan" /> -->
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
