<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="56dp"
    tools:showIn="@layout/app_bar_main">

    <Button
        android:id="@+id/button"
        android:layout_width="166dp"
        android:layout_height="141dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="121dp"
        android:text="@string/menu_maps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.133" />

    <Button
        android:id="@+id/button4"
        android:layout_width="166dp"
        android:layout_height="141dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="160dp"
        android:text="@string/menu_Friends"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="166dp"
        android:layout_height="141dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="28dp"
        android:onClick="@string/navigation_drawer_open"
        android:text="@string/menu_Profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="163dp"
        android:layout_height="141dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="36dp"
        android:text="@string/menu_scan"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="82dp"
        android:layout_height="52dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="165dp"
        android:text="345"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="165dp"
        android:text="Playfit Points"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
</android.support.constraint.ConstraintLayout>